--- a/templates/base.html
+++ b/templates/base.html
@@ -16,10 +16,9 @@
       </a>
       <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
         <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/">Главная</a>
-        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/schedule">Расписание</a>
-        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/posts">Новости</a>
-        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/create-article">Создать</a>
+        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/coaches-schedule">Расписание тренеров</a>
         <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/membership">Абонементы</a>
+        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/contacts">Контакты</a>
 
         <!-- Условие для отображения кнопки Вход/Выход -->
         {% if current_user.is_authenticated %}
@@ -30,5 +29,11 @@
       </nav>
     </div>
     {% block body %}{% endblock %}
+
+    <!-- Скрипты Bootstrap и jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    {% block scripts %}{% endblock %}
 </body>
 </html>
